# vibe-registry

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
registry/: index.json
tests/: test_registry.py
vibe_registry/: __init__.py  cli.py  config_surgery.py  engine.py  lockfile.py  manifest.py
